First working bar meter for hwinfo temperatures

--- a/Processor/core_hwinfo.ini
+++ b/Processor/core_hwinfo.ini
@@ -3,12 +3,13 @@ Update=1000
 Group=circa2
 
 [Metadata]
-Name=Circuitous | HWiNFO Processor Core 1
+Name=CircuitousTwo | HWiNFO Processor Core 1
 Author=twschum
 Information=Show Temperaturem load, freqency; data from HWiNFO
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
+[Variables]
 @include1=#@#Settings.txt
 @include2=#@#Appearance.txt
 
@@ -44,15 +45,15 @@ HWiNFOType=CurrentValue
 MinValue=#minTemp#
 MaxValue=#maxTemp#
 
-[mColorConditionTemp]
-Measure=Calc
-Formula=mTempCurrent >= #dangerTemp# ? 2 : (mTempCurrent >= #warnTemp# ? 1 : -1)
-IfAboveValue=1
-IfAboveAction=[!SetOption bar BarColor "#dangerColor#"][!UpdateMeter *][!Redraw]
-IfEqualValue=1
-IfEqualAction=[!SetOption bar BarColor "#warningColor#"][!UpdateMeter *][!Redraw]
-IfBelowValue=0
-IfBelowAction=[!SetOption bar BarColor "#normalColor#"][!UpdateMeter *][!Redraw]
+;[mColorConditionTemp]
+;Measure=Calc
+;Formula=mTempCurrent >= #dangerTemp# ? 2 : (mTempCurrent >= #warnTemp# ? 1 : -1)
+;IfAboveValue=1
+;IfAboveAction=[!SetOption bar BarColor "#dangerColor#"][!UpdateMeter *][!Redraw]
+;IfEqualValue=1
+;IfEqualAction=[!SetOption bar BarColor "#warningColor#"][!UpdateMeter *][!Redraw]
+;IfBelowValue=0
+;IfBelowAction=[!SetOption bar BarColor "#normalColor#"][!UpdateMeter *][!Redraw]
 
 [mLowestTemp]
 Measure=Plugin
@@ -87,52 +88,71 @@ MaxValue=#maxTemp#
 ; ------------------------------------------------------------
 ; Meters
 
-@include5="#@#sharedMeters.inc"
-
-[bar]
-Meter=Bar
-MeasureName=mCurrentTemp
-MeterStyle=barCommon
-
-[barLowest]
-Meter=Shape
-MeasureName=mLowest
-MeterStyle=barTickCommon
-Shape=Line 0,-2,0,(0.283*#radius#+4) | Offset ((6*#radius#)*([mLowest]-#minTemp#)*(#maxTemp#-#minTemp#)),0 | StrokeWidth 4 | Stroke Color #coolColor#
-
-[barHighest]
-Meter=Shape
-MeasureName=mHighest
-MeterStyle=barTickCommon
-Shape=Line 0,0,0,(0.283*#radius#) | Offset ((6*#radius#)*([mHighest]-#minTemp#)*(#maxTemp#-#minTemp#)),0 | StrokeWidth 4 | Stroke Color #coolColor#
+@include5="#@#sharedMetersBar.inc"
 
 [mainText]
+X=0
+Y=0
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mCurrentTemp
-Percentual=1
-Text="cpu %1"
+StringAlign=Left
+Text="core 1: %1"
+
+[mainTextUnit]
+UpdateDivider=-1
+X=R
+Y=0
+;ClipStringW=(#radius#*4)
+;ClipStringH=(#subTwoLines# = 1 ? (#radius#) : (#radius#*0.5))
+StringAlign=Left
+StringCase=None
+Meter=STRING
+MeterStyle=mainTextStyle | mainTextCommon
+MeasureName=mUnit
+
+[bar]
+Meter=BAR
+MeasureName=mCurrentTemp
+MeterStyle=barCommon
+
+[barLowestOffset]
+DynamicVariables=1
+Measure=Calc
+Formula=
+
+[barLowest]
+Meter=Shape
+MeasureName=mLowestTemp
+MeterStyle=barTickCommon
+Shape=Rectangle ((6*#radius#)*([mLowestTemp]-#minTemp#)/(#maxTemp#-#minTemp#)),-2.5,4,((0.283*#radius#)+4) | Fill Color #coolColor#
+[barAverage]
+Meter=Shape
+MeasureName=mAverageTemp
+MeterStyle=barTickCommon
+Shape=Rectangle ((6*#radius#)*([mAverageTemp]-#minTemp#)/(#maxTemp#-#minTemp#)),-2.5,4,((0.283*#radius#)+4) | Fill Color #warningColor#
+[barHighest]
+Meter=Shape
+MeasureName=mHighestTemp
+MeterStyle=barTickCommon
+Shape=Rectangle ((6*#radius#)*([mHighestTemp]-#minTemp#)/(#maxTemp#-#minTemp#)),-2.5,4,((0.283*#radius#)+4) | Fill Color #dangerColor#
 
 [subTextMin]
+Y=3R
+X=#edging#
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 MeasureName=mLowestTemp
 Text="min: %1 | "
 [subTextAvg]
+X=R
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 MeasureName=mAverageTemp
 Text="avg: %1 |"
-X=R
 [subTextMax]
+X=R
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 MeasureName=mHighestTemp
 Text="max: %1 "
-X=R
-[subTextUnit]
-Meter=STRING
-MeterStyle=subTextStyle | subTextCommon
-MeasureName=mUnit
-Text=" %1"
-X=R
