Adds new shared meter inc file

--- a/Processor/core_hwinfo.ini
+++ b/Processor/core_hwinfo.ini
@@ -97,7 +97,7 @@ Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mCurrentTemp
 StringAlign=Left
-Text="core 1: %1"
+Text="core max: %1"
 
 [mainTextUnit]
 UpdateDivider=-1
@@ -115,11 +115,6 @@ MeasureName=mUnit
 Meter=BAR
 MeasureName=mCurrentTemp
 MeterStyle=barCommon
-
-[barLowestOffset]
-DynamicVariables=1
-Measure=Calc
-Formula=
 
 [barLowest]
 Meter=Shape
