Get values working

--- a/Processor/core_0/core0.ini
+++ b/Processor/core_0/core0.ini
@@ -17,32 +17,34 @@ License=Creative Commons BY-NC-SA 3.0
 
 ; ------------------------------------------------------------
 ; HWiNFO Measures
+[Variables]
+; utilization
+sensorIdUtil=0xf0000300
+sensorInstanceUtil=0x0
+entryIdUtil=0x7000000
+; core frequency
+sensorIdFreq=0xf0000300
+sensorInstanceFreq=0x0
+entryIdFreq=0x6000000
+minFreq=0
+maxFreq=5000
 ; core temperature
 sensorIdTemp=0xf0000400
 sensorInstanceTemp=0x0
-entryIdTemp=0x100007f
-; core frequency
-sensorIdFreq=0xf0000400
-sensorInstanceFreq=0x0
-entryIdFreq=0x100007f
-minFreq=0
-maxFreq=5000
-; utilization
-sensorIdUtil=0xf0000400
-sensorInstanceUtil=0x0
-entryIdUtil=0x100007f
+entryIdTemp=0x1000000
 
-@includeSensorTemp="#@#hwinfo_sensor_temperature.inc
-@includeSensorFreq="#@#hwinfo_sensor_freqency.inc
-@includeSensorFreq="#@#hwinfo_sensor_utilization.inc
+@includeSensorUtil="#@#hwinfo_sensor_utilization.inc"
+@includeSensorFreq="#@#hwinfo_sensor_frequency.inc"
+@includeSensorTemp="#@#hwinfo_sensor_temperature.inc"
 
 ; TODO move to common
 [innerTextCommon]
 X=(#radius#)r
 Y=(#radius#)r
+AntiAlias=1
 StringAlign=CenterCenter
 FontFace=#subFont#
-FontSize=(#radius#*0.5)
+FontSize=(#radius#*0.3)
 FontColor=#textSubColor#
 StringStyle=#fontStyle#
 
@@ -51,7 +53,7 @@ StringStyle=#fontStyle#
 Meter=IMAGE
 X=0
 Y=0
-W=((#radius#*10)+(#edging#*2))
+W=((#radius#*12)+(#edging#*2))
 H=((#radius#*2)+(#edging#*2))
 ;SolidColor=0,0,0,1
 SolidColor=20,30,34,255
@@ -73,15 +75,15 @@ MeasureName=mCurrentUtil
 [pieInnerTextUtil]
 Meter=STRING
 MeterStyle=innerTextCommon
-Percentual=1
+MeasureName=mCurrentUtil
 Text="%1%"
 
 ; Frequency meter
 [innerEdgeFreq]
 Meter=ROUNDLINE
 MeterStyle=roundlineCommon | innerEdgeCommon | innerEdgeStyle
-X=(#edging#)r
-Y=(#edging#)r
+X=(2*#radius#)+(#edging#)
+Y=#edging#
 [pieBgFreq]
 Meter=ROUNDLINE
 MeterStyle=roundlineCommon | pieBgCommon
@@ -95,14 +97,15 @@ MeasureName=mCurrentFreq
 [pieInnerTextFreq]
 Meter=STRING
 MeterStyle=innerTextCommon
+MeasureName=mCurrentFreq
 Text="%1#CRLF#MHz"
 
 ; Temperature meter
 [innerEdgeTemp]
 Meter=ROUNDLINE
 MeterStyle=roundlineCommon | innerEdgeCommon | innerEdgeStyle
-X=(#edging#)r
-Y=(#edging#)r
+X=(4*#radius#)+(#edging#)
+Y=#edging#
 [pieBgTemp]
 Meter=ROUNDLINE
 MeterStyle=roundlineCommon | pieBgCommon
@@ -118,12 +121,14 @@ MeasureName=mCurrentTemp
 [dividerTemp]
 Meter=IMAGE
 MeterStyle=dividerStyle | dividerCommon
+X=(6*#radius#)+(#edging#)
+W=(#radius#*6)
 
 [mainTextTemp]
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
-MeasureName=
-Percentual=1
+MeasureName=mCurrentTemp
+X=(6*#radius#)+(#edging#)
 Text="Core #0: %1 C"
 
 [subTextTemp]
@@ -132,4 +137,5 @@ MeterStyle=subTextStyle | subTextCommon
 MeasureName=mLowestTemp
 MeasureName2=mAverageTemp
 MeasureName3=mHighestTemp
+ClipStringW=(#radius#*6)
 Text="min: %1 | avg: %2 | max: %3"
