Working on design on the bar meter

--- a/Processor/core_0/core0.ini
+++ b/Processor/core_0/core0.ini
@@ -98,7 +98,8 @@ MeasureName=mCurrentFreq
 Meter=STRING
 MeterStyle=innerTextCommon
 MeasureName=mCurrentFreq
-Text="%1#CRLF#MHz"
+Scale=1000.0
+Text="%1#CRLF#GHz"
 
 ; Temperature meter
 [innerEdgeTemp]
@@ -128,8 +129,9 @@ W=(#radius#*6)
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mCurrentTemp
+StringCase=Normal
 X=(6*#radius#)+(#edging#)
-Text="Core #0: %1 C"
+Text="core #0: %1 C"
 
 [subTextTemp]
 Meter=STRING
