--- a/Processor/core_hwinfo.ini
+++ b/Processor/core_hwinfo.ini
@@ -16,6 +16,14 @@ License=Creative Commons BY-NC-SA 3.0
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
 
+barW=(6*#radius#)
+barBoxH=((0.283*#radius#)+4.3)
+barBoxOffsetY=-2.3
+barScalingFactorTemp=(#barW#/(#maxTemp#-#minTemp#))
+barTickW=1
+barTickOffsetY=(#barBoxOffsetY#-1.5)
+barTickH=(#barBoxH#+3)
+
 ; ------------------------------------------------------------
 ; HWiNFO Measures
 ; Instance variables: set per sensor
@@ -111,6 +119,13 @@ Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mUnit
 
+[barBox]
+X=#edging#
+Y=(#radius#)r
+Meter=Shape
+AntiAlias=1
+Shape=Rectangle 0,barBoxOffsetY,#barW#,#barBoxH# | Fill Color #pieBgColor# |  Stroke Color #pieColor#
+
 [bar]
 Meter=BAR
 MeasureName=mCurrentTemp
@@ -120,17 +135,17 @@ MeterStyle=barCommon
 Meter=Shape
 MeasureName=mLowestTemp
 MeterStyle=barTickCommon
-Shape=Rectangle ((6*#radius#)*([mLowestTemp]-#minTemp#)/(#maxTemp#-#minTemp#)),-2.5,4,((0.283*#radius#)+4) | Fill Color #coolColor#
+Shape=Rectangle (#barScalingFactorTemp#*([mLowestTemp]-#minTemp#)),#barTickOffsetY#,#barTickW#,#barTickH# | Fill Color #pieColor# | Stroke Color #pieColor#
 [barAverage]
 Meter=Shape
 MeasureName=mAverageTemp
 MeterStyle=barTickCommon
-Shape=Rectangle ((6*#radius#)*([mAverageTemp]-#minTemp#)/(#maxTemp#-#minTemp#)),-2.5,4,((0.283*#radius#)+4) | Fill Color #warningColor#
+Shape=Rectangle (#barScalingFactorTemp#*([mAverageTemp]-#minTemp#)),#barBoxOffsetY#,#barTickW#,#barBoxH# | Fill Color #pieColor# | Stroke Color #pieColor#
 [barHighest]
 Meter=Shape
 MeasureName=mHighestTemp
 MeterStyle=barTickCommon
-Shape=Rectangle ((6*#radius#)*([mHighestTemp]-#minTemp#)/(#maxTemp#-#minTemp#)),-2.5,4,((0.283*#radius#)+4) | Fill Color #dangerColor#
+Shape=Rectangle (#barScalingFactorTemp#*([mHighestTemp]-#minTemp#)),#barBoxOffsetY#,#barTickW#,#barBoxH# | Fill Color #pieColor# | Stroke Color #pieColor#
 
 [subTextMin]
 Y=3R
