Working, decent looking temperature bar sensor

--- a/Processor/core_hwinfo.ini
+++ b/Processor/core_hwinfo.ini
@@ -17,12 +17,13 @@ License=Creative Commons BY-NC-SA 3.0
 @include4="#@#Styles\#orient#.inc"
 
 barW=(6*#radius#)
-barBoxH=((0.283*#radius#)+4.3)
-barBoxOffsetY=-2.3
+barH=(0.283*#radius#)
 barScalingFactorTemp=(#barW#/(#maxTemp#-#minTemp#))
+barBoxH=(#barH#+4.3)
+barBoxY=-2.3
 barTickW=1
-barTickOffsetY=(#barBoxOffsetY#-1.5)
-barTickH=(#barBoxH#+3)
+barTickH=(#barBoxH#+4)
+barTickY=(#barBoxY#-2)
 
 ; ------------------------------------------------------------
 ; HWiNFO Measures
@@ -53,15 +54,16 @@ HWiNFOType=CurrentValue
 MinValue=#minTemp#
 MaxValue=#maxTemp#
 
-;[mColorConditionTemp]
-;Measure=Calc
-;Formula=mTempCurrent >= #dangerTemp# ? 2 : (mTempCurrent >= #warnTemp# ? 1 : -1)
-;IfAboveValue=1
-;IfAboveAction=[!SetOption bar BarColor "#dangerColor#"][!UpdateMeter *][!Redraw]
-;IfEqualValue=1
-;IfEqualAction=[!SetOption bar BarColor "#warningColor#"][!UpdateMeter *][!Redraw]
-;IfBelowValue=0
-;IfBelowAction=[!SetOption bar BarColor "#normalColor#"][!UpdateMeter *][!Redraw]
+[mColorConditionTemp]
+Measure=Calc
+Formula=mCurrentTemp >= #dangerTemp# ? 2 : (mCurrentTemp >= #warnTemp# ? 1 : -1)
+IfAboveValue=1
+IfAboveAction=[!SetOption bar BarColor "#dangerColor#"][!UpdateMeter *][!Redraw]
+IfEqualValue=1
+IfEqualAction=[!SetOption bar BarColor "#warningColor#"][!UpdateMeter *][!Redraw]
+IfBelowValue=0
+IfBelowAction=[!SetOption bar BarColor "#normalColor#"][!UpdateMeter *][!Redraw]
+DynamicVariables=1
 
 [mLowestTemp]
 Measure=Plugin
@@ -111,8 +113,6 @@ Text="core max: %1"
 UpdateDivider=-1
 X=R
 Y=0
-;ClipStringW=(#radius#*4)
-;ClipStringH=(#subTwoLines# = 1 ? (#radius#) : (#radius#*0.5))
 StringAlign=Left
 StringCase=None
 Meter=STRING
@@ -120,49 +120,37 @@ MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mUnit
 
 [barBox]
-X=#edging#
-Y=(#radius#)r
 Meter=Shape
-AntiAlias=1
-Shape=Rectangle 0,barBoxOffsetY,#barW#,#barBoxH# | Fill Color #pieBgColor# |  Stroke Color #pieColor#
+MeterStyle=barBoxCommon
+Shape=Rectangle 0,#barBoxY#,#barW#,#barBoxH# | Fill Color #pieBgColor# |  Stroke Color #pieColor#
 
 [bar]
-Meter=BAR
-MeasureName=mCurrentTemp
+Meter=Bar
 MeterStyle=barCommon
+MeasureName=mCurrentTemp
 
 [barLowest]
 Meter=Shape
 MeasureName=mLowestTemp
 MeterStyle=barTickCommon
-Shape=Rectangle (#barScalingFactorTemp#*([mLowestTemp]-#minTemp#)),#barTickOffsetY#,#barTickW#,#barTickH# | Fill Color #pieColor# | Stroke Color #pieColor#
+Shape=Rectangle (#barScalingFactorTemp#*([mLowestTemp]-#minTemp#)),#barTickY#,#barTickW#,#barTickH# | Fill Color #pieColor# | Stroke Color #pieColor#
 [barAverage]
 Meter=Shape
 MeasureName=mAverageTemp
 MeterStyle=barTickCommon
-Shape=Rectangle (#barScalingFactorTemp#*([mAverageTemp]-#minTemp#)),#barBoxOffsetY#,#barTickW#,#barBoxH# | Fill Color #pieColor# | Stroke Color #pieColor#
+Shape=Rectangle (#barScalingFactorTemp#*([mAverageTemp]-#minTemp#)),#barTickY#,#barTickW#,#barTickH# | Fill Color #pieColor# | Stroke Color #pieColor#
 [barHighest]
 Meter=Shape
 MeasureName=mHighestTemp
 MeterStyle=barTickCommon
-Shape=Rectangle (#barScalingFactorTemp#*([mHighestTemp]-#minTemp#)),#barBoxOffsetY#,#barTickW#,#barBoxH# | Fill Color #pieColor# | Stroke Color #pieColor#
+Shape=Rectangle (#barScalingFactorTemp#*([mHighestTemp]-#minTemp#)),#barTickY#,#barTickW#,#barTickH# | Fill Color #pieColor# | Stroke Color #pieColor#
 
-[subTextMin]
+[subText]
 Y=3R
 X=#edging#
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 MeasureName=mLowestTemp
-Text="min: %1 | "
-[subTextAvg]
-X=R
-Meter=STRING
-MeterStyle=subTextStyle | subTextCommon
-MeasureName=mAverageTemp
-Text="avg: %1 |"
-[subTextMax]
-X=R
-Meter=STRING
-MeterStyle=subTextStyle | subTextCommon
-MeasureName=mHighestTemp
-Text="max: %1 "
+MeasureName2=mAverageTemp
+MeasureName4=mHighestTemp
+Text="min: %1 | avg: %2 | max: %3"
