Refactoring to allow multiple core monitors

--- a/Processor/core_0/core0.ini
+++ b/Processor/core_0/core0.ini
@@ -1,11 +1,11 @@
 [Rainmeter]
-Update=1000
-Group=circa2
+Update=2000
+Group=circa2_cpu
 
 [Metadata]
-Name=CircuitousTwo | CPU core 0
+Name=CircuitousTwo | CPU Core 0
 Author=twschum
-Information=Displays the percent load and core frequency of the a CPU core
+Information=Displays the percent load, core frequency, and temperature of the this CPU core.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
@@ -16,7 +16,6 @@ License=Creative Commons BY-NC-SA 3.0
 @include4="#@#Styles\#orient#.inc"
 
 ; ------------------------------------------------------------
-; HWiNFO Measures
 [Variables]
 ; utilization
 sensorIdUtil=0xf0000300
@@ -26,118 +25,19 @@ entryIdUtil=0x7000000
 sensorIdFreq=0xf0000300
 sensorInstanceFreq=0x0
 entryIdFreq=0x6000000
-minFreq=0
-maxFreq=5000
 ; core temperature
 sensorIdTemp=0xf0000400
 sensorInstanceTemp=0x0
 entryIdTemp=0x1000000
+; Sets edge of temperature bar, must be in the [Variables] section
+barXzero=((4*#radius#)+#edging#)
 
+; ------------------------------------------------------------
+; HWiNFO Sensor Measures
 @includeSensorUtil="#@#hwinfo_sensor_utilization.inc"
 @includeSensorFreq="#@#hwinfo_sensor_frequency.inc"
 @includeSensorTemp="#@#hwinfo_sensor_temperature.inc"
 
-; TODO move to common
-[innerTextCommon]
-X=(#radius#)r
-Y=(#radius#)r
-AntiAlias=1
-StringAlign=CenterCenter
-FontFace=#subFont#
-FontSize=(#radius#*0.3)
-FontColor=#textSubColor#
-StringStyle=#fontStyle#
-
-[Bg]
-; base for the whole skin
-Meter=IMAGE
-X=0
-Y=0
-W=((#radius#*12)+(#edging#*2))
-H=((#radius#*2)+(#edging#*2))
-;SolidColor=0,0,0,1
-SolidColor=20,30,34,255
-
-; Utilization meter
-[innerEdgeUtil]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | innerEdgeCommon | innerEdgeStyle
-[pieBgUtil]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | pieBgCommon
-[outerEdgeUtil]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | outerEdgeCommon
-[pieUtil]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | pieCommon
-MeasureName=mCurrentUtil
-[pieInnerTextUtil]
-Meter=STRING
-MeterStyle=innerTextCommon
-MeasureName=mCurrentUtil
-Text="%1%"
-
-; Frequency meter
-[innerEdgeFreq]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | innerEdgeCommon | innerEdgeStyle
-X=(2*#radius#)+(#edging#)
-Y=#edging#
-[pieBgFreq]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | pieBgCommon
-[outerEdgeFreq]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | outerEdgeCommon
-[pieFreq]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | pieCommon
-MeasureName=mCurrentFreq
-[pieInnerTextFreq]
-Meter=STRING
-MeterStyle=innerTextCommon
-MeasureName=mCurrentFreq
-Scale=1000.0
-Text="%1#CRLF#GHz"
-
-; Temperature meter
-[innerEdgeTemp]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | innerEdgeCommon | innerEdgeStyle
-X=(4*#radius#)+(#edging#)
-Y=#edging#
-[pieBgTemp]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | pieBgCommon
-[outerEdgeTemp]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | outerEdgeCommon
-
-[pieTemp]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | pieCommon
-MeasureName=mCurrentTemp
-
-[dividerTemp]
-Meter=IMAGE
-MeterStyle=dividerStyle | dividerCommon
-X=(6*#radius#)+(#edging#)
-W=(#radius#*6)
-
-[mainTextTemp]
-Meter=STRING
-MeterStyle=mainTextStyle | mainTextCommon
-MeasureName=mCurrentTemp
-StringCase=Normal
-X=(6*#radius#)+(#edging#)
-Text="core #0: %1 C"
-
-[subTextTemp]
-Meter=STRING
-MeterStyle=subTextStyle | subTextCommon
-MeasureName=mLowestTemp
-MeasureName2=mAverageTemp
-MeasureName3=mHighestTemp
-ClipStringW=(#radius#*6)
-Text="min: %1 | avg: %2 | max: %3"
+; ------------------------------------------------------------
+; Meters
+@includeCoreMeters="#@#hwinfo_core_meter.inc"
