--- a/Processor/core_hwinfo.ini
+++ b/Processor/core_hwinfo.ini
@@ -1,6 +1,6 @@
 ﻿[Rainmeter]
-Update=1000
-Group=circa2
+Update=2000
+Group=circa2_cpu
 
 [Metadata]
 Name=CircuitousTwo | HWiNFO Processor Core 1
@@ -12,145 +12,22 @@ License=Creative Commons BY-NC-SA 3.0
 [Variables]
 @include1=#@#Settings.txt
 @include2=#@#Appearance.txt
-
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
 
-barW=(6*#radius#)
-barH=(0.283*#radius#)
-barScalingFactorTemp=(#barW#/(#maxTemp#-#minTemp#))
-barBoxH=(#barH#+4.3)
-barBoxY=-2.3
-barTickW=1
-barTickH=(#barBoxH#+4)
-barTickY=(#barBoxY#-2)
-
 ; ------------------------------------------------------------
 ; HWiNFO Measures
-; Instance variables: set per sensor
-sensorId=0xf0000400
-sensorInstance=0x0
-entryId=0x100007f
-; @includeHwSensor
+; core frequency
+sensorIdTemp=0xf0000400
+sensorInstanceTemp=0x0
+entryIdTemp=0x100007f
 
-; HWiNFO Temperature Measures
-; TODO try to set this up as generic as possible
-
-[mUnit]
-Measure=Plugin
-Plugin=HWiNFO
-HWiNFOSensorId=#sensorId#
-HWiNFOSensorInstance=#sensorInstance#
-HWiNFOEntryId=#entryId#
-HWiNFOType=Units
-
-[mCurrentTemp]
-Measure=Plugin
-Plugin=HWiNFO
-HWiNFOSensorId=#sensorId#
-HWiNFOSensorInstance=#sensorInstance#
-HWiNFOEntryId=#entryId#
-HWiNFOType=CurrentValue
-MinValue=#minTemp#
-MaxValue=#maxTemp#
-
-[mColorConditionTemp]
-Measure=Calc
-Formula=mCurrentTemp >= #dangerTemp# ? 2 : (mCurrentTemp >= #warnTemp# ? 1 : -1)
-IfAboveValue=1
-IfAboveAction=[!SetOption bar BarColor "#dangerColor#"][!UpdateMeter *][!Redraw]
-IfEqualValue=1
-IfEqualAction=[!SetOption bar BarColor "#warningColor#"][!UpdateMeter *][!Redraw]
-IfBelowValue=0
-IfBelowAction=[!SetOption bar BarColor "#normalColor#"][!UpdateMeter *][!Redraw]
-DynamicVariables=1
-
-[mLowestTemp]
-Measure=Plugin
-Plugin=HWiNFO
-HWiNFOSensorId=#sensorId#
-HWiNFOSensorInstance=#sensorInstance#
-HWiNFOEntryId=#entryId#
-HWiNFOType=MinimumValue
-MinValue=#minTemp#
-MaxValue=#maxTemp#
-
-[mHighestTemp]
-Measure=Plugin
-Plugin=HWiNFO
-HWiNFOSensorId=#sensorId#
-HWiNFOSensorInstance=#sensorInstance#
-HWiNFOEntryId=#entryId#
-HWiNFOType=MaximumValue
-MinValue=#minTemp#
-MaxValue=#maxTemp#
-
-[mAverageTemp]
-Measure=Plugin
-Plugin=HWiNFO
-HWiNFOSensorId=#sensorId#
-HWiNFOSensorInstance=#sensorInstance#
-HWiNFOEntryId=#entryId#
-HWiNFOType=AverageValue
-MinValue=#minTemp#
-MaxValue=#maxTemp#
+@includeSensorTemp="#@#hwinfo_sensor_temperature.inc"
 
 ; ------------------------------------------------------------
 ; Meters
+[mainTextValue]
+Text="cpu: %1"
 
-@include5="#@#sharedMetersBar.inc"
-
-[mainText]
-X=0
-Y=0
-Meter=STRING
-MeterStyle=mainTextStyle | mainTextCommon
-MeasureName=mCurrentTemp
-StringAlign=Left
-Text="core max: %1"
-
-[mainTextUnit]
-UpdateDivider=-1
-X=R
-Y=0
-StringAlign=Left
-StringCase=None
-Meter=STRING
-MeterStyle=mainTextStyle | mainTextCommon
-MeasureName=mUnit
-
-[barBox]
-Meter=Shape
-MeterStyle=barBoxCommon
-Shape=Rectangle 0,#barBoxY#,#barW#,#barBoxH# | Fill Color #pieBgColor# |  Stroke Color #pieColor#
-
-[bar]
-Meter=Bar
-MeterStyle=barCommon
-MeasureName=mCurrentTemp
-
-[barLowest]
-Meter=Shape
-MeasureName=mLowestTemp
-MeterStyle=barTickCommon
-Shape=Rectangle (#barScalingFactorTemp#*([mLowestTemp]-#minTemp#)),#barTickY#,#barTickW#,#barTickH# | Fill Color #pieColor# | Stroke Color #pieColor#
-[barAverage]
-Meter=Shape
-MeasureName=mAverageTemp
-MeterStyle=barTickCommon
-Shape=Rectangle (#barScalingFactorTemp#*([mAverageTemp]-#minTemp#)),#barTickY#,#barTickW#,#barTickH# | Fill Color #pieColor# | Stroke Color #pieColor#
-[barHighest]
-Meter=Shape
-MeasureName=mHighestTemp
-MeterStyle=barTickCommon
-Shape=Rectangle (#barScalingFactorTemp#*([mHighestTemp]-#minTemp#)),#barTickY#,#barTickW#,#barTickH# | Fill Color #pieColor# | Stroke Color #pieColor#
-
-[subText]
-Y=3R
-X=#edging#
-Meter=STRING
-MeterStyle=subTextStyle | subTextCommon
-MeasureName=mLowestTemp
-MeasureName2=mAverageTemp
-MeasureName4=mHighestTemp
-Text="min: %1 | avg: %2 | max: %3"
+@includeBg="#@#standardSkinBg.inc"
+@includeTempBar="#@#temperatureBarMeter.inc"
