Working multi core monitors!

--- a/Processor/core_0/core0.ini
+++ b/Processor/core_0/core0.ini
@@ -31,6 +31,7 @@ sensorInstanceTemp=0x0
 entryIdTemp=0x1000000
 ; Sets edge of temperature bar, must be in the [Variables] section
 barXzero=((4*#radius#)+#edging#)
+coreN=0
 
 ; ------------------------------------------------------------
 ; HWiNFO Sensor Measures
@@ -40,4 +41,4 @@ barXzero=((4*#radius#)+#edging#)
 
 ; ------------------------------------------------------------
 ; Meters
-@includeCoreMeters="#@#hwinfo_core_meter.inc"
+@includeCoreMeters="#@#hwinfo_core_meters.inc"
